# ICAIF_stablecoin-stressbench

./: .env.example  .gitignore  DATA.md  IMPLEMENTATION_STATUS.md  LEADERBOARD.md  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
configs/: benchmark_splits.yaml  event_windows.yaml  event_windows_addon.yaml  event_windows_historical.yaml  fee_schedules.yaml  instruments.yaml  token_addresses.yaml  venues.yaml
data/: README.md
docs/: benchmark_card.md  data_card.md  economic_benchmark_card.md  execution_route_coverage.md  historical_methodology.md  icaif26_addon_todo.md  icaif26_methodology_addendum.md  icaif26_paper_outline.md  model_justification.md  reproducibility_manifest.md  research_methodology.md  stablecoin_stress_event_catalog.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_evaluation.ipynb
paper/: main.tex  table_catalogue.tex
results/: benchmark_results.csv
scripts/: analyze_false_positives.py  build_features.py  build_historical_event_panel.py  build_price_grade_event_features.py  compute_meta_bootstrap_cis.py  evaluate_models.py  explore_executable_transfer.py  explore_onchain_executable.py  extract_exploration_results.py  fetch_real_data.py  generate_source_audit_table.py  make_addon_figures.py  make_addon_tables.py  make_depth_withdrawal_figure.py  make_event_universe_figure.py  make_execution_provenance_table.py  make_expanded_historical_figures.py  make_figure1_improved.py  make_historical_figures.py  make_historical_stress_figures.py  make_paper_figures.py  (+29 more)
(+144 files in other folders)
