[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stablecoin-stressbench"
version = "0.1.0"
description = "A transaction-cost-aware benchmark for detecting, forecasting, and economically ranking stablecoin dislocations."
readme = "README.md"
authors = [
    { name = "Manus AI", email = "support@manus.im" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "clickhouse-connect>=0.6.0",
    "duckdb>=0.9.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "ccxt>=4.1.0",
    "cryptofeed>=2.3.0",
    "web3>=6.11.0",
    "gql[all]>=3.5.0",
    "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
